# Small2D_SDL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Small2D_SDL.cbp  Small2D_SDL.depend  Small2D_SDL.layout  game_engine.cbp  game_engine.depend  game_engine.layout  main.cpp  main.hpp  pch.h  pch.h.gch  small2d.vcxproj.filters
2dsdlengine.xcodeproj/: project.pbxproj
Config/: config.txt
Core/: DisplayManager.cpp  DisplayManager.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameState.cpp  GameState.hpp  IntroState.cpp  IntroState.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  display_manager.cpp  display_manager.hpp  game.cpp  game.hpp  game.hpp.gch  game_state.cpp  global.cpp  global.hpp  intro_state.cpp  intro_state.hpp  menu_state.cpp  menu_state.hpp  play_state.cpp  play_state.hpp
Debug/: vc140.idb
Images/: COPYRIGHTS
Objects/: BaseWidget.cpp  BaseWidget.hpp  CollisionObject.hpp  Creature.cpp  Creature.hpp  MovableObject.hpp  Object.cpp  Object.hpp  Wall.cpp  Wall.hpp  collision_object.hpp  creature.cpp  creature.hpp  object.hpp  wall.cpp  wall.hpp
Small2D_SDL.xcodeproj/: project.pbxproj
UIObject/: Button.hpp  Label.cpp  Label.hpp  Player.cpp  UIObject.cpp  UIObject.hpp  Wall.cpp
Util/: FPSCounter.cpp  FPSCounter.hpp  FPSManager.cpp  FPSManager.hpp  FontManager.cpp  FontManager.hpp  Logger.cpp  Logger.hpp  Texture.cpp  Texture.hpp  fps_counter.cpp  fps_counter.hpp  image_func.cpp  image_func.hpp  portable_SDL2.h
Widgets/: BaseWidget.cpp  Button.cpp  Button.hpp
doxygen/: doxyfile
include/: FontManager.hpp  PlayState.hpp  Wall.hpp  main.hpp
src/: Button.cpp  DisplayManager.cpp  FontManager.cpp  GameManager.cpp  GameState.cpp  IntroState.cpp  MenuState.cpp  PlayState.cpp  (+4 more)
(+24 files in other folders)
